--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ main {
     position: relative;
     max-width: 450px;
     width: 100%;
-    max-height: 640px;
+    max-height: 800px;
     height: 100%;
-    background-color: skyblue;
+    background-color: #70C5CD;
 }
 
 .score {
@@ -38,7 +38,7 @@ main {
     overflow: hidden;
     position: relative;
     height: 90%;
-    max-height: 640px;
+    max-height: 800px;
     width: 100%;
 }
 
@@ -133,7 +133,7 @@ main {
 
 .objChild img:first-child {
     transform: rotate(180deg);
-    margin-bottom: 8rem;
+    margin-bottom: 9rem;
 }
 
 .objChild img {
