--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Micro+5+Charted&family=Orbitron:wght@400..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Orbitron", sans-serif;
 }
 
 body {
@@ -24,14 +26,15 @@ main {
     background-color: #70C5CD;
 }
 
-.name{
+.name {
     position: absolute;
     top: 0;
     left: 50%;
-    transform: translate(-50%,100%);
+    transform: translate(-50%, 100%);
     z-index: 15;
 }
-.name img{
+
+.name img {
     width: 15rem;
 }
 
@@ -46,11 +49,11 @@ main {
     padding: 1rem;
     top: 0;
     left: 0;
-    font-weight: bolder;
     text-transform: uppercase;
+    font-weight: bolder;
     color: rgb(255, 255, 255);
-    text-shadow: 0px 2px black,
-        -2px 0px black;
+    text-shadow: 0px 1px black,
+        -1px 0px black;
     letter-spacing: 0.1rem;
     display: none;
 }
@@ -193,15 +196,18 @@ main {
     width: 10rem;
     z-index: 10;
 }
-.restart img:first-child{
+
+.restart img:first-child {
     width: 15rem;
     margin: 2rem;
 }
+
 .restart img {
     transition: scale 0.3s ease;
     scale: 0;
 }
-.restart img:last-child{
+
+.restart img:last-child {
     width: 6rem;
 }
 
@@ -213,13 +219,14 @@ main {
     scale: 0.9;
 }
 
-.message{
+.message {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
-.message img{
+
+.message img {
     width: 14rem;
     transition: all 0.3s ease;
 }
