--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ main {
     aspect-ratio: 92/64;
     border-radius: 50% 50% 40% 50%;
     background: url('./images/bird.png') no-repeat center;
+    /* clip-path: polygon(4% 4%, 94% 4%, 4% 94%, 94% 94%); */
     background-size: cover;
     animation: upDown 800ms ease-in-out infinite;
 
