--- a/style.css
+++ b/style.css
@@ -39,31 +39,25 @@ main {
 }
 
 .score {
-    display: flex;
-    width: 100%;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     z-index: 10;
     position: absolute;
-    padding: 1rem;
+    padding: 0.2rem 0.5rem;
+    margin: 0.5rem;
     top: 0;
     left: 0;
     text-transform: uppercase;
     font-weight: bolder;
     color: rgb(255, 255, 255);
-    text-shadow: 0px 1px black,
-        -1px 0px black;
-    letter-spacing: 0.1rem;
+    background-color: #E86101;
+    border: 0.25rem solid white;
+    box-shadow: 2px 4px rgb(85, 48, 0),
+        -2px 4px rgb(85, 48, 0),
+        2px -2px rgb(85, 48, 0),
+        -2px -2px rgb(85, 48, 0), 2px 0 rgb(85, 48, 0);
+    text-shadow: 0 2px rgb(192, 81, 5);
     display: none;
-}
-
-#currScore {
-    font-size: 3rem;
-}
-
-#maxScore {
-    margin-top: -0.3rem;
 }
 
 .playsection {
@@ -79,6 +73,8 @@ main {
     position: absolute;
     bottom: 0;
     height: 640px;
+    transition: all 0.5s ease;
+    opacity: 1;
 }
 
 .ground {
