--- a/style.css
+++ b/style.css
@@ -70,9 +70,10 @@ main {
 
 .playsection img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     position: absolute;
     bottom: 0;
-    height: 640px;
     transition: all 0.5s ease;
     opacity: 1;
 }
