--- a/style.css
+++ b/style.css
@@ -151,6 +151,12 @@ main {
         -2px -2px rgb(85, 48, 0), 2px 0 rgb(85, 48, 0);
 }
 
+.hatList,
+.mouthList {
+    background-color: transparent;
+    backdrop-filter: blur(5px);
+}
+
 .hatShop,
 .mouthShop,
 .start {
